--- a/index.html
+++ b/index.html
@@ -24,19 +24,71 @@
 
     <title>Frontend Mentor | Space tourism website</title>
   </head>
-  <body>
-    <!-- 00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
-
-  Explore -->
+  <body class="home">
+    <header class="primary-header flex">
+      <div>
+        <img
+          src="./assets/shared/logo.svg"
+          alt="space tourism logo"
+          class="logo"
+        />
+      </div>
+      <div>
+        <!-- <nav>
+          <ul class="primary-navigation flex underline-indicators">
+            <li class="active">
+              <a
+                class="ff-sans-cond uppercase text-white letter-spacing-2"
+                href="index.html"
+                ><span>00</span>Home</a
+              >
+            </li>
+            <li>
+              <a
+                class="ff-sans-cond uppercase text-white letter-spacing-2"
+                href="destination.html"
+                ><span>01</span>Destination</a
+              >
+            </li>
+            <li>
+              <a
+                class="ff-sans-cond uppercase text-white letter-spacing-2"
+                href="crew.html"
+                ><span>02</span>Crew</a
+              >
+            </li>
+            <li>
+              <a
+                class="ff-sans-cond uppercase text-white letter-spacing-2"
+                href="technology.html"
+                ><span>03</span>Technology</a
+              >
+            </li>
+          </ul>
+        </nav> -->
+      </div>
+    </header>
+    <div class="grid-container grid-container--home">
+      <div>
+        <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
+          So, you want to travel to
+          <span class="uppercase ff-serif fs-900 text-white d-block"
+            >Space</span
+          >
+        </h1>
+        <p>
+          Let’s face it; if you want to go to space, you might as well genuinely
+          go to outer space and not hover kind of on the edge of it. Well sit
+          back, and relax because we’ll give you a truly out of this world
+          experience!
+        </p>
+      </div>
+      <div>
+        <a href="#" class="large-button bg-white text-dark uppercase ff-serif"
+          >Explore</a
+        >
+      </div>
+    </div>
     <script src="index.pack.js"></script>
   </body>
 </html>
