--- a/index.html
+++ b/index.html
@@ -33,40 +33,44 @@
           class="logo"
         />
       </div>
-      <div>
-        <!-- <nav>
-          <ul class="primary-navigation flex underline-indicators">
-            <li class="active">
-              <a
-                class="ff-sans-cond uppercase text-white letter-spacing-2"
-                href="index.html"
-                ><span>00</span>Home</a
-              >
-            </li>
-            <li>
-              <a
-                class="ff-sans-cond uppercase text-white letter-spacing-2"
-                href="destination.html"
-                ><span>01</span>Destination</a
-              >
-            </li>
-            <li>
-              <a
-                class="ff-sans-cond uppercase text-white letter-spacing-2"
-                href="crew.html"
-                ><span>02</span>Crew</a
-              >
-            </li>
-            <li>
-              <a
-                class="ff-sans-cond uppercase text-white letter-spacing-2"
-                href="technology.html"
-                ><span>03</span>Technology</a
-              >
-            </li>
-          </ul>
-        </nav> -->
-      </div>
+      <button class="mobile-nav-toggle" aria-controls="primary-navigation">
+        <span class="sr-only" aria-expanded="false">Menu</span>
+      </button>
+      <nav>
+        <ul
+          id="primary-navigation"
+          class="primary-navigation flex underline-indicators"
+        >
+          <li class="active">
+            <a
+              class="ff-sans-cond uppercase text-white letter-spacing-2"
+              href="index.html"
+              ><span>00</span>Home</a
+            >
+          </li>
+          <li>
+            <a
+              class="ff-sans-cond uppercase text-white letter-spacing-2"
+              href="destination.html"
+              ><span>01</span>Destination</a
+            >
+          </li>
+          <li>
+            <a
+              class="ff-sans-cond uppercase text-white letter-spacing-2"
+              href="crew.html"
+              ><span>02</span>Crew</a
+            >
+          </li>
+          <li>
+            <a
+              class="ff-sans-cond uppercase text-white letter-spacing-2"
+              href="technology.html"
+              ><span>03</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="grid-container grid-container--home">
       <div>
