--- a/destination-moon.html
+++ b/destination-moon.html
@@ -1,37 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-  01 Pick your destination
+    <!-- Custom Stylesheets -->
+    <link rel="stylesheet" href="index.css" />
 
-  Moon
-  Mars
-  Europa
-  Titan
+    <title>Frontend Mentor | Space tourism website</title>
+    <script src="index.js" defer></script>
+  </head>
 
-  Moon
+  <body class="destination">
+    <a class="skip-to-content" href="#main">Skip to content</a>
+    <header class="primary-header flex">
+      <div class="logo-container">
+        <img
+          src="./assets/shared/logo.svg"
+          alt="space tourism logo"
+          class="logo"
+        />
+      </div>
+      <button class="mobile-nav-toggle" aria-controls="primary-navigation">
+        <span class="sr-only" aria-expanded="false">Menu</span>
+      </button>
+      <nav class="nav-container">
+        <ul
+          id="primary-navigation"
+          data-visible="false"
+          class="primary-navigation flex underline-indicators"
+        >
+          <li class="active">
+            <a
+              class="ff-sans-cond uppercase text-white letter-spacing-2"
+              href="index.html"
+              ><span aria-hidden="true">00</span>Home</a
+            >
+          </li>
+          <li>
+            <a
+              class="ff-sans-cond uppercase text-white letter-spacing-2"
+              href="destination.html"
+              ><span aria-hidden="true">01</span>Destination</a
+            >
+          </li>
+          <li>
+            <a
+              class="ff-sans-cond uppercase text-white letter-spacing-2"
+              href="crew.html"
+              ><span aria-hidden="true">02</span>Crew</a
+            >
+          </li>
+          <li>
+            <a
+              class="ff-sans-cond uppercase text-white letter-spacing-2"
+              href="technology.html"
+              ><span aria-hidden="true">03</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <!-- my after:: is here -->
+    </header>
 
-  See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-  regain perspective and come back refreshed. While you’re there, take in some history 
-  by visiting the Luna 2 and Apollo 11 landing sites.
+    <main id="main" class="grid-container grid-container--destination flow">
+      <h1 class="numbered-title">
+        <span aria-hidden="true">01</span> Pick your destination
+      </h1>
+      <img src="assets/destination/image-moon.png" alt="the moon" />
 
-  Avg. distance
-  384,400 km
+      <!-- Tabs -->
+      <div class="tab-list underline-indicators flex">
+        <button
+          aria-selected="true"
+          class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond"
+        >
+          Moon
+        </button>
+        <button
+          aria-selected="false"
+          class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond"
+        >
+          Mars
+        </button>
+        <button
+          aria-selected="false"
+          class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond"
+        >
+          Europa
+        </button>
+        <button
+          aria-selected="false"
+          class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond"
+        >
+          Titan
+        </button>
+      </div>
 
-  Est. travel time
-  3 days
-</body>
+      <article class="destination-info">
+        <h2 class="fs-800 uppercase ff-serif">Moon</h2>
+
+        <p>
+          See our planet as you’ve never seen it before. A perfect relaxing trip
+          away to help regain perspective and come back refreshed. While you’re
+          there, take in some history by visiting the Luna 2 and Apollo 11
+          landing sites.
+        </p>
+
+        <div class="destination-meta flex">
+          <div>
+            <h3
+              class="text-accent fs-200 uppercase letter-spacing-2 ff-sans-cond"
+            >
+              Avg. distance
+            </h3>
+            <p class="ff-serif uppercase">384,400 km</p>
+          </div>
+
+          <div>
+            <h3
+              class="text-accent fs-200 uppercase letter-spacing-2 ff-sans-cond"
+            >
+              Est. travel time
+            </h3>
+            <p class="ff-serif uppercase">3 days</p>
+          </div>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
