--- a/destination-moon.html
+++ b/destination-moon.html
@@ -88,31 +88,31 @@
       <div class="tab-list underline-indicators flex">
         <button
           aria-selected="true"
-          class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond"
+          class="uppercase text-accent letter-spacing-2 ff-sans-cond"
         >
           Moon
         </button>
         <button
           aria-selected="false"
-          class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond"
+          class="uppercase text-accent letter-spacing-2 ff-sans-cond"
         >
           Mars
         </button>
         <button
           aria-selected="false"
-          class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond"
+          class="uppercase text-accent letter-spacing-2 ff-sans-cond"
         >
           Europa
         </button>
         <button
           aria-selected="false"
-          class="uppercase text-accent letter-spacing-2 bg-dark ff-sans-cond"
+          class="uppercase text-accent letter-spacing-2 ff-sans-cond"
         >
           Titan
         </button>
       </div>
 
-      <article class="destination-info">
+      <article class="destination-info flow">
         <h2 class="fs-800 uppercase ff-serif">Moon</h2>
 
         <p>
