--- a/crew-commander.html
+++ b/crew-commander.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="index.css" />
 
     <title>Frontend Mentor | Space tourism website</title>
-    <script src="index.js" defer></script>
+    <script src="navigation.js" defer></script>
   </head>
 
   <body class="crew">
@@ -109,8 +109,13 @@
           time as commander of Crew Dragon Demo-2.
         </p>
       </article>
-
-      <img src="assets/crew/image-douglas-hurley.png" alt="Douglas Hurley" />
+      <picture>
+        <source
+          srcset="assets/crew/image-douglas-hurley.webp"
+          type="image/webp"
+        />
+        <img src="assets/crew/image-douglas-hurley.png" alt="Douglas Hurley" />
+      </picture>
     </main>
   </body>
 </html>
