added functionality to the destination tabs using js

--- a/destination.html
+++ b/destination.html
@@ -85,15 +85,15 @@
       </h1>
 
       <!-- Destination Images -->
-      <picture>
+      <picture id="moon-image">
         <source srcset="assets/destination/image-moon.webp" type="image/webp" />
         <img src="assets/destination/image-moon.png" alt="the moon" />
       </picture>
-      <picture hidden>
+      <picture hidden id="mars-image">
         <source srcset="assets/destination/image-mars.webp" type="image/webp" />
         <img src="assets/destination/image-mars.png" alt="the planet Mars" />
       </picture>
-      <picture hidden>
+      <picture hidden id="europa-image">
         <source
           srcset="assets/destination/image-europa.webp"
           type="image/webp"
@@ -103,7 +103,7 @@
           alt="the planet Europa"
         />
       </picture>
-      <picture hidden>
+      <picture hidden id="titan-image">
         <source
           srcset="assets/destination/image-titan.webp"
           type="image/webp"
@@ -113,32 +113,48 @@
       <!-- End of Destination Images -->
 
       <!-- Tabs -->
-      <div class="tab-list underline-indicators flex">
+      <div
+        class="tab-list underline-indicators flex"
+        role="tablist"
+        aria-label="destination list"
+      >
         <button
           aria-selected="true"
+          role="tab"
+          aria-controls="moon-tab"
           class="uppercase text-accent letter-spacing-2 ff-sans-cond"
           tabindex="0"
+          data-image="moon-image"
         >
           Moon
         </button>
         <button
           aria-selected="false"
+          role="tab"
+          aria-controls="mars-tab"
           class="uppercase text-accent letter-spacing-2 ff-sans-cond"
           tabindex="-1"
+          data-image="mars-image"
         >
           Mars
         </button>
         <button
           aria-selected="false"
+          role="tab"
+          aria-controls="europa-tab"
           class="uppercase text-accent letter-spacing-2 ff-sans-cond"
           tabindex="-1"
+          data-image="europa-image"
         >
           Europa
         </button>
         <button
           aria-selected="false"
+          role="tab"
+          aria-controls="titan-tab"
           class="uppercase text-accent letter-spacing-2 ff-sans-cond"
           tabindex="-1"
+          data-image="titan-image"
         >
           Titan
         </button>
@@ -146,7 +162,12 @@
 
       <!-- Destination Articles -->
       <!-- Moon -->
-      <article class="destination-info flow">
+      <article
+        class="destination-info flow"
+        id="moon-tab"
+        tabindex="0"
+        role="tabpanel"
+      >
         <h2 class="fs-800 uppercase ff-serif">Moon</h2>
 
         <p>
@@ -178,7 +199,13 @@
       </article>
 
       <!-- Mars -->
-      <article hidden class="destination-info flow">
+      <article
+        hidden
+        class="destination-info flow"
+        id="mars-tab"
+        tabindex="0"
+        role="tabpanel"
+      >
         <h2 class="fs-800 uppercase ff-serif">Mars</h2>
 
         <p>
@@ -209,7 +236,13 @@
       </article>
 
       <!-- Europa -->
-      <article hidden class="destination-info flow">
+      <article
+        hidden
+        class="destination-info flow"
+        id="europa-tab"
+        tabindex="0"
+        role="tabpanel"
+      >
         <h2 class="fs-800 uppercase ff-serif">Europa</h2>
 
         <p>
@@ -241,7 +274,13 @@
       </article>
 
       <!-- Titan -->
-      <article hidden class="destination-info flow">
+      <article
+        hidden
+        class="destination-info flow"
+        id="titan-tab"
+        tabindex="0"
+        role="tabpanel"
+      >
         <h2 class="fs-800 uppercase ff-serif">Europa</h2>
 
         <p>
