refactored Javascript code for the destination tabs system

--- a/destination.html
+++ b/destination.html
@@ -281,7 +281,7 @@
         tabindex="0"
         role="tabpanel"
       >
-        <h2 class="fs-800 uppercase ff-serif">Europa</h2>
+        <h2 class="fs-800 uppercase ff-serif">Titan</h2>
 
         <p>
           The only moon known to have a dense atmosphere other than Earth, Titan
