--- a/crew.html
+++ b/crew.html
@@ -24,6 +24,7 @@
 
     <title>Frontend Mentor | Space tourism website</title>
     <script src="navigation.js" defer></script>
+    <script src="tabs.js" defer></script>
   </head>
 
   <body class="crew">
@@ -97,7 +98,8 @@
           <span class="sr-only">The crew engineer</span>
         </button>
       </div>
-
+      <!-- Crew Member Articles -->
+      <!-- Douglas Hurley Commander Crew Member -->
       <article class="crew-details flow">
         <header class="flow flow--space-small">
           <h2 class="fs-600 ff-serif uppercase">Commander</h2>
@@ -109,13 +111,86 @@
           time as commander of Crew Dragon Demo-2.
         </p>
       </article>
-      <picture>
+      <!-- Mark Shuttleworth Mission Specialist Crew Member -->
+      <article class="crew-details flow">
+        <header class="flow flow--space-small">
+          <h2 class="fs-600 ff-serif uppercase">Mission Specialist</h2>
+          <p class="fs-700 uppercase ff-serif">Mark Shuttleworth</p>
+        </header>
+        <p>
+          Mark Richard Shuttleworth is the founder and CEO of Canonical, the
+          company behind the Linux-based Ubuntu operating system. Shuttleworth
+          bcame the first South African to travel to space as a space tourist.
+        </p>
+      </article>
+      <!-- Victor Glover Pilot Crew Member -->
+      <article class="crew-details flow">
+        <header class="flow flow--space-small">
+          <h2 class="fs-600 ff-serif uppercase">Pilot</h2>
+          <p class="fs-700 uppercase ff-serif">Victor Glover</p>
+        </header>
+        <p>
+          Pilot on the first operational flight of the SpaceX Crew Dragon to the
+          International Space Station. Glover is a commander in the U.S. Navy
+          where he pilots an F/A-18. He was a crew member of Expedition 64, and
+          he served as a station systems flight engineer.
+        </p>
+      </article>
+      <!-- Anousheh Ansari Flight Engineer Crew Member -->
+      <article class="crew-details flow">
+        <header class="flow flow--space-small">
+          <h2 class="fs-600 ff-serif uppercase">Flight Engineer</h2>
+          <p class="fs-700 uppercase ff-serif">Anousheh Ansari</p>
+        </header>
+        <p>
+          Anousheh Ansari is an Iranian American engineer and co-founder of
+          Prodea Systems. Ansari was the fourth self-funded space tourist, the
+          first self-funded woman to fly to the ISS, and the first Iranian in
+          space.
+        </p>
+      </article>
+      <!-- End of Crew Member Articles -->
+      <!-- Pictures of Crew Members Begins -->
+      <!-- Picture Commander -->
+      <picture id="commander-image">
         <source
           srcset="assets/crew/image-douglas-hurley.webp"
           type="image/webp"
         />
         <img src="assets/crew/image-douglas-hurley.png" alt="Douglas Hurley" />
       </picture>
+      <!-- Picture Mission Specialist -->
+      <picture hidden id="mission-specialist-image">
+        <source
+          srcset="assets/crew/image-mark-shuttleworth.webp"
+          type="image/webp"
+        />
+        <img
+          src="assets/crew/image-mark-shuttleworth.png"
+          alt="Mark Shuttleworth"
+        />
+      </picture>
+      <!-- Picture Pilot -->
+      <picture hidden id="pilot-image">
+        <source
+          srcset="assets/crew/image-victor-glover.webp"
+          type="image/webp"
+        />
+        <img src="assets/crew/image-victor-glover.png" alt="Victor Glover" />
+      </picture>
+      <!-- Picture Flight Engineer -->
+      <picture hidden id="flight-engineer-image">
+        <source
+          srcset="assets/crew/image-anousheh-ansari.webp"
+          type="image/webp"
+        />
+        <img
+          src="assets/crew/image-anousheh-ansari.png"
+          alt="Anousheh Ansari"
+        />
+      </picture>
+
+      <!-- Pictures of Crew Members Ends -->
     </main>
   </body>
 </html>
