adjusted grid layout for the crew members to make crew images larger - next I will markup the technology section

--- a/technology.html
+++ b/technology.html
@@ -24,8 +24,11 @@
 
     <title>Frontend Mentor | Space tourism website</title>
     <script src="navigation.js" defer></script>
+    <script src="tabs.js" defer></script>
+
+    
   </head>
-  <body class="home">
+  <body class="crew">
     <a class="skip-to-content" href="#main">Skip to content</a>
     <header class="primary-header flex">
       <div class="logo-container">
@@ -44,7 +47,7 @@
           data-visible="false"
           class="primary-navigation flex underline-indicators"
         >
-          <li class="active">
+          <li>
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
               href="index.html"
@@ -65,7 +68,7 @@
               ><span aria-hidden="true">02</span>Crew</a
             >
           </li>
-          <li>
+          <li class="active">
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
               href="technology.html"
@@ -74,32 +77,15 @@
           </li>
         </ul>
       </nav>
-      <!-- my after:: is here -->
-    </header>
+  
 
-    <main id="main" class="grid-container grid-container--home">
-      <div>
-        <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
-          So, you want to travel to
-          <span class="uppercase ff-serif fs-900 text-white d-block"
-            >Space</span
-          >
-        </h1>
-        <p>
-          Let’s face it; if you want to go to space, you might as well genuinely
-          go to outer space and not hover kind of on the edge of it. Well sit
-          back, and relax because we’ll give you a truly out of this world
-          experience!
-        </p>
-      </div>
-      <div>
-        <a
-          href="destination.html"
-          class="large-button bg-white text-dark uppercase ff-serif"
-          >Explore</a
-        >
-      </div>
-    </main>
-    <script src="index.pack.js"></script>
+
+
+    03 Space launch 101 1 2 3 The
+    terminology... Launch vehicle A launch vehicle or carrier rocket is a
+    rocket-propelled vehicle used to carry a payload from Earth's surface to
+    space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the
+    most powerful in operation. Standing 150 metres tall, it's quite an
+    awe-inspiring sight on the launch pad!
   </body>
 </html>
