--- a/crew.html
+++ b/crew.html
@@ -138,7 +138,7 @@
           <h2 class="fs-600 ff-serif uppercase">Commander</h2>
           <p class="fs-700 uppercase ff-serif">Douglas Hurley</p>
         </header>
-        <p>
+        <p class="text-accent">
           Douglas Gerald Hurley is an American engineer, former Marine Corps
           pilot and former NASA astronaut. He launched into space for the third
           time as commander of Crew Dragon Demo-2.
@@ -156,7 +156,7 @@
           <h2 class="fs-600 ff-serif uppercase">Mission Specialist</h2>
           <p class="fs-700 uppercase ff-serif">Mark Shuttleworth</p>
         </header>
-        <p>
+        <p class="text-accent">
           Mark Richard Shuttleworth is the founder and CEO of Canonical, the
           company behind the Linux-based Ubuntu operating system. Shuttleworth
           bcame the first South African to travel to space as a space tourist.
@@ -174,7 +174,7 @@
           <h2 class="fs-600 ff-serif uppercase">Pilot</h2>
           <p class="fs-700 uppercase ff-serif">Victor Glover</p>
         </header>
-        <p>
+        <p class="text-accent">
           Pilot on the first operational flight of the SpaceX Crew Dragon to the
           International Space Station. Glover is a commander in the U.S. Navy
           where he pilots an F/A-18. He was a crew member of Expedition 64, and
@@ -193,7 +193,7 @@
           <h2 class="fs-600 ff-serif uppercase">Flight Engineer</h2>
           <p class="fs-700 uppercase ff-serif">Anousheh Ansari</p>
         </header>
-        <p>
+        <p class="text-accent">
           Anousheh Ansari is an Iranian American engineer and co-founder of
           Prodea Systems. Ansari was the fourth self-funded space tourist, the
           first self-funded woman to fly to the ISS, and the first Iranian in
