adjusting layout issues with numbered indicators

--- a/technology.html
+++ b/technology.html
@@ -148,7 +148,20 @@
       <!-- Space Capsule Article -->
       <!-- End of Technology Articles -->
       <!-- Technology Pictures -->
+      <!-- Launch Vehicle Picture -->
+      <picture id="vehicle-image">
+        <source
+          media="(min-width: 45rem)"
+          srcset="assets/technology/image-launch-vehicle-portrait.jpg"
+        />
+        <img
+          src="assets/technology/image-launch-vehicle-landscape.jpg"
+          alt="Space Vehicle"
+        />
+      </picture>
       <!-- Spaceport Picture -->
+      <!-- Space Capsule Picture -->
+      <!-- End of Technology Pictures -->
     </main>
   </body>
 </html>
