added rotation animation to destination images

--- a/technology.html
+++ b/technology.html
@@ -108,7 +108,7 @@
           role="tab"
           tabindex="-1"
         >
-          <div><span class="sr-only">Spaceport</span>2</div>
+          <div class="test"><span class="sr-only">Spaceport</span>2</div>
         </button>
 
         <button
@@ -197,7 +197,7 @@
       <!-- End of Technology Articles -->
       <!-- Technology Pictures -->
       <!-- Launch Vehicle Picture -->
-      <picture hidden id="vehicle-image">
+      <picture id="vehicle-image">
         <source
           media="(min-width: 45rem)"
           srcset="assets/technology/image-launch-vehicle-portrait.jpg"
@@ -219,7 +219,7 @@
         />
       </picture>
       <!-- Space Capsule Picture -->
-      <picture id="capsule-image">
+      <picture hidden id="capsule-image">
         <source
           media="(min-width: 45rem)"
           srcset="assets/technology/image-space-capsule-portrait.jpg"
