adjusted number alignment to center on tech buttons

--- a/technology.html
+++ b/technology.html
@@ -89,6 +89,7 @@
         aria-label="technology list"
       >
         <button
+          class="techBtn"
           aria-selected="true"
           aria-controls="vehicle-article"
           data-image="vehicle-image"
@@ -102,16 +103,18 @@
         </button>
 
         <button
+          class="techBtn"
           aria-selected="false"
           aria-controls="spaceport-article"
           data-image="spaceport-image"
           role="tab"
           tabindex="-1"
         >
-          <div class="test"><span class="sr-only">Spaceport</span>2</div>
+          <span class="sr-only">Spaceport</span>2
         </button>
 
         <button
+          class="techBtn"
           aria-selected="false"
           aria-controls="capsule-article"
           data-image="capsule-image"
