--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             >Space</span
           >
         </h1>
-        <p>
+        <p class="text-accent">
           Let’s face it; if you want to go to space, you might as well genuinely
           go to outer space and not hover kind of on the edge of it. Well sit
           back, and relax because we’ll give you a truly out of this world
